# ft

./: .bazelrc  .editorconfig  .gitattributes  .gitignore  .gitmodules  .mailmap  .release-please-manifest.json  .repomixignore  BUILD.bazel  C00  C01  C02  C03  C04  C05  C06  C07  C08  CHANGELOG.md  Cargo.toml  MODULE.bazel  Makefile  README.md  WORKSPACE  build.zig  build_events.json  build_helpers.zig  copts.bzl  flake.nix  gpm.sh  gradient.sh  manager.sh  release-please-config.json  repomix.config.json
all/: BUILD.bazel
central/minilibx/: .bazelrc  .gitignore  BUILD.bazel  build.zig  configure  flake.nix  mlx.h  mlx_clear_window.c  mlx_destroy_display.c  mlx_destroy_image.c  mlx_destroy_window.c  mlx_expose_hook.c  mlx_ext_randr.c  mlx_flush_event.c  mlx_get_color_value.c  mlx_get_data_addr.c  mlx_hook.c  mlx_init.c  mlx_int.h  mlx_int_anti_resize_win.c  mlx_int_do_nothing.c  mlx_int_get_visual.c  mlx_int_param_event.c  mlx_int_set_win_event_mask.c  mlx_int_str_to_wordtab.c  mlx_int_wait_first_expose.c  mlx_key_hook.c  mlx_lib_xpm.c  mlx_loop.c  mlx_loop_hook.c  mlx_mouse.c  mlx_mouse_hook.c  mlx_new_image.c  mlx_new_window.c  mlx_pixel_put.c  mlx_put_image_to_window.c  mlx_screen_size.c  mlx_set_font.c  mlx_string_put.c  mlx_xpm.c  (+1 more)
central/minilibx/test/: main.c  new_win.c
external-libs/libXpm/: BUILD.bazel
extra-arthur/: BUILD.bazel  CHANGELOG.md  Cargo.toml  Makefile  README.md  repomix.config.json
extra-arthur/src/: cli.rs  error.rs  lib.rs  main.rs
extra-arthur/src/commands/: list.rs  mod.rs  submit.rs  test.rs
extra-arthur/src/config/: file_copy.rs  hooks.rs  mod.rs  preprocessor.rs  push.rs  submit.rs  text_replacement.rs
extra-arthur/src/git/: mod.rs
extra-arthur/src/processor/: function.rs  gpm.rs  mod.rs
extra-arthur/src/projects/: gnl.rs  libft.rs  mod.rs
extra-arthur/src/runner/: c.rs  cat_e.rs  mod.rs  results.rs
extra-arthur/tests/get_next_line/: inputs.txt  test.c
extra-arthur/tests/libft/: libft.h
extra-gpm/: Cargo.toml  example.push.toml
extra-gpm/src/: lib.rs  main.rs
extra-gpm/src/commands/: submit.rs  test.rs
extra-gpm/src/config/: push.rs
extra-gpm/src/processor/: mod.rs
extra-gpm/src/validation/: mod.rs
extra-ps-visualizer-minecraft/: Cargo.toml  Makefile  README.md
extra-ps-visualizer-minecraft/src/network/: callbacks.rs
extra-ps-visualizer-minecraft/src/visualizer/: mod.rs
extra-push-swap-visualizer-minecraft/: .gitignore  Cargo.toml  README.md
extra-push-swap-visualizer-minecraft/src/: cli.rs  consts.rs  main.rs  push_swap.rs  settings.rs  state.rs  utils.rs
extra-push-swap-visualizer-minecraft/src/visualizer/: blocks.rs  handler.rs  mod.rs  utils.rs
milestone-1/ft_printf/: BUILD.bazel  CHANGELOG.md  Makefile  build.zig  test.zig
milestone-1/ft_printf/includes/: ft_printf.h  ft_printf_bonus.h
milestone-1/ft_printf/src/: display_hex.c  display_signed.c  display_str.c  ft_parse.c  ft_print_display.c  ft_printf.c  ft_printf_bonus.c  ft_putchar.c  ft_putnbr_base_ssize.c  ft_putstr_ssize.c  parse.c  pfputchar.c  pfputnbr_base.c  pfputstr.c  print_pad.c  printf_c_bonus.c  printf_hex.c  printf_signed.c  printf_str.c  printf_u_bonus.c
milestone-1/ft_printf/test/: main_test.c
milestone-1/get_next_line/: BUILD.bazel  CHANGELOG.md  Makefile  build.zig
milestone-1/get_next_line/includes/: get_next_line.h
milestone-1/get_next_line/src/: files_utils.c  files_utils2.c  get_next_line.c  get_next_line_utils.c  main.c
milestone-2/fdf/: .gitignore  BUILD.bazel  CHANGELOG.md  Makefile  build.zig  push.toml  test.sh
milestone-2/fdf/includes/: fdf.h
milestone-2/fdf/src/: _main.c  args_check.c  clear_utils.c  color_get.c  color_get_by_scheme.c  color_get_line.c  color_parsing.c  color_utils.c  ctx_clear.c  ctx_init.c  debug_toggle.c  error.c  error_arg.c  error_file.c  error_map.c  error_math.c  error_memory.c  error_mlx.c  fast_atoi.c  file_open.c  free_2d_array.c  initial_scale.c  malloc.c  map_elevation.c  map_parse.c  map_parse_utils.c  map_utils.c  mlx_bresenham.c  mlx_bresenham_utils.c  mlx_hooks.c  mlx_hooks_key.c  mlx_pixel_put.c  mlx_render_line.c  mlx_render_lod.c  mlx_render_lod_debug.c  mlx_render_lod_debug_utils.c  mlx_render_next_frame.c  mlx_render_section.c  mlx_render_section_debug.c  mlx_render_section_utils.c  (+14 more)
milestone-2/fdf/test_maps/: _r1_2.fdf  (+1 more)
milestone-2/pipex/: BUILD.bazel  CHANGELOG.md  Makefile  _test.sh  build.zig  push.toml
milestone-2/push_swap/: .editorconfig  .gitignore  BUILD.bazel  CHANGELOG.md  Makefile  README.md  build.zig  complexity  tester.sh
milestone-3/minishell/: .gitignore  BUILD.bazel  CHANGELOG.md  Makefile  README.md  build.zig
milestone-3/philosophers/: .gitignore  BUILD.bazel  CHANGELOG.md  Makefile  README.md  build.zig  push.toml
milestone-4-cpp00/ex01/: BUILD.bazel  Contact.cpp  Contact.hpp  Makefile  PhoneBook.cpp  PhoneBook.hpp  main.cpp
milestone-4-cub3d/: .gitignore  .repomixignore  BUILD.bazel  Makefile  files_bonus.mk  files_extra.mk  files_mandatory.mk  mlx_writev.supp  x11_leaks.supp
milestone-4-cub3d/include/: cub3d.h  draw.h  mem.h  minimap_bonus.h  mouse_bonus.h  parsing.h  pproc.h  sprite_bonus.h  texture.h
milestone-4-cub3d/includes/: cub3d.h  mem.h  parsing.h  texture.h  utils.h
milestone-4-cub3d/src/: 3_main.c  d_draw.c  d_draw2.c  d_render.c  d_render_b.c  f_fps.c  i_system_b.c  j_animation_m.c  j_render_b.c  j_render_b2.c  j_render_m.c  j_system_b.c  l_mlx.c  l_mlx_b.c  l_mlx_m.c  m_utils.c  main.c  main_b.c  main_m.c  p_file.c  p_map.c  p_validation.c  p_validation_m.c  r_raycasting.c
milestone-4/cub3d/: .repomixignore  3DS_README.md  BUILD.bazel  CHANGELOG.md  README.md  build.zig  build_3ds.sh  check_functions.md  mlx_writev.supp
milestone4/cpp00/: BUILD.bazel
milestone4/cpp01/: BUILD.bazel
pcc/libasm/: BUILD.bazel  CHANGELOG.md  Makefile  README.txt  build.zig  test.c  test_dbg
rushes/hotrace/: .gitignore  BUILD.bazel  CHANGELOG.md  Makefile  README.md  build.zig  get_next_line_utils.c  hotrace.h  libft_utils.c
rushes/libunit/: .gitignore  .repomixignore  BUILD.bazel  CHANGELOG.md  README.md  build.zig
(+1713 files in other folders)
