###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.           #
#                                                                             #
# For more details, please check                                              #
# https://github.com/bazelbuild/bazel/issues/18958                            #
###############################################################################

module(
    name = "ft",
    version = "1.0.0",
)

# bazel_dep(name = "platforms", version = "0.0.11")
# bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "rules_cc", version = "0.2.9")
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
bazel_dep(name = "rules_nixpkgs_core", version = "0.13.0")
bazel_dep(name = "rules_nixpkgs_cc", version = "0.13.0")

git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/xFile3160/bazel-compile-commands-extractor.git",
    branch = "7fe1eab26d2b8eeb5e1c6a2f38bddb001e3f9696",
)

git_override(
    module_name = "rules_nixpkgs_core",
    remote = "https://github.com/tweag/rules_nixpkgs",
    commit = "cb0f9be1798131ea4336fd02b850edeeb1972680",
    strip_prefix = "core",
)

git_override(
    module_name = "rules_nixpkgs_cc",
    remote = "https://github.com/tweag/rules_nixpkgs",
    commit = "cb0f9be1798131ea4336fd02b850edeeb1972680",
    strip_prefix = "toolchains/cc",
)

nix_repo = use_extension("@rules_nixpkgs_core//extensions:repository.bzl", "nix_repo")
nix_repo.flake(
    name = "nixpkgs",
    lock_file = "//:flake.lock",
)
use_repo(nix_repo, "nixpkgs")

nix_pkg = use_extension("@rules_nixpkgs_core//extensions:package.bzl", "nix_pkg")
nix_pkg.attr(
    name = "readline",
    repo = "@nixpkgs",
    attr = "readline",
)
nix_pkg.attr(
    name = "libX11",
    repo = "@nixpkgs",
    attr = "xorg.libX11",
)
nix_pkg.attr(
    name = "libXpm",
    repo = "@nixpkgs",
    attr = "xorg.libXpm",
)
nix_pkg.attr(
    name = "libXext",
    repo = "@nixpkgs",
    attr = "xorg.libXext",
)
use_repo(nix_pkg, "readline", "libX11", "libXpm", "libXext")
# use_repo(nix_pkg, "readline", "libX11", "libXpm")

nix_cc = use_extension("@rules_nixpkgs_cc//extensions:toolchains.bzl", "nix_cc")
nix_cc.toolchain(
    name = "nix_toolchain",
    repository = "@nixpkgs",
)
use_repo(nix_cc, "nix_toolchain")

# note: i'm not configuring the rust crates in bazel, as cargo is good enough
# for my use-case.
