[package]
name = "arthur"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive", "env"] }
tokio = { version = "1.42.0", features = ["full"] }
crossterm = "0.28.1"
color-eyre = "0.6.3"
rand = "0.8.5"
tempfile = "3.14.0"
pretty_env_logger = "0.5.0"
log = "0.4.22"
async-trait = "0.1.83"
