[package]
name = "arthur"
version = "1.0.0"

[dependencies]
clap = { version = "4.5.23", features = ["derive", "env"] }
tokio = { version = "1.43.1", features = ["full"] }
crossterm = "0.28.1"
color-eyre = "0.6.3"
rand = "0.8.5"
tempfile = "3.14.0"
pretty_env_logger = "0.5.0"
log = "0.4.22"
async-trait = "0.1.83"
once_cell = "1.20.2"
anyhow = "1.0.95"
walkdir = "2.5.0"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.9"
regex = "1.11.1"
toml = "0.8.19"
globset = "0.4.15"
env_logger = "0.11.6"
colored = "2.2.0"
similar = "2.6.0"
prettytable-rs = "0.10.0"
