[package]
name = "gpm"
version = "0.1.0"
edition.workspace = true
description = "Git Project Manager - A monorepo management tool"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
colored = "2.2.0"
env_logger = "0.11.6"
globset = "0.4.15"
log = "0.4.22"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.34"
tempfile = "3.15.0"
thiserror = "2.0.9"
toml = "0.8.19"
walkdir = "2.5.0"
