[package]
name = "mcps"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.23", features = ["derive", "env"] }
log = "0.4.22"
once_cell = "1.20.2"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
tokio = { version = "1.43.1", features = ["full"] }
valence = { git = "https://github.com/valence-rs/valence" }
