[package]
name = "push_swap_mc_visualizer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive", "env"] }
log = "0.4.22"
once_cell = "1.20.2"
rand = "0.8.5"
tokio = { version = "1.42.0", features = ["full"] }
valence = { git = "https://github.com/valence-rs/valence" }
