load("//:copts.bzl", "CC_COPTS")

cc_binary(
    name = "cub3d",
	srcs = glob(["src/**/*.c", "includes/**/*.h"]),
    copts = CC_COPTS,
    includes = ["includes"],
    visibility = ["//visibility:public"],
    deps = [
		"//milestone-0-libft:libft", 
		"//milestone-1-ft_printf:ft_printf", 
        "//central/minilibx:mlx",
	],
)
