load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "mlx",
    srcs = glob(
        ["*.c"],
        exclude = ["mlx_lib_xpm.c"],
    ),
    hdrs = [
        "mlx_int.h",
        "X11/xpm.h",
    ] + select({
        "//:on_nix": [],
        "//conditions:default": ["mlx.h"],
    }),
    copts = [
        "-std=gnu89",
        "-w", # external lib, suppress warns
        "-O3",
    ],
    includes = [
        ".",
        "/usr/include",
    ],
    deps = select({
        "//:on_nix": [
            "@nix_libX11//:libX11", 
            "@nix_libXext//:libXext", 
            "@nix_libXpm//:libXpm"
        ],
        "//conditions:default": [],
    }),
    linkopts = select({
        "//:on_nix": [],
        "//conditions:default": ["-lX11", "-lXext", "-l:libXpm.so.4", "-lm"],
    }),
    linkstatic = True,
    visibility = ["//visibility:public"],
)
