load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "mlx",
    srcs = glob(
        ["*.c"],
        exclude = ["mlx_lib_xpm.c"],
    ),
    hdrs = [
        "mlx_int.h",
    ] + select({
        "//:on_nix": [],
        "//conditions:default": ["mlx.h"],
    }),
    copts = [
        "-std=gnu89",
        "-w", # external lib, suppress warns
        "-O3",
    ],
    includes = [
        ".",
        "/usr/include",
    ],
    deps = select({
        "//:on_nix": [
            "@libX11//:libX11",
            "@libXext//:libXext",
            # "@libXpm//:libXpm",
        ],
        "//conditions:default": [],
    }),
    linkopts = select({
        "//:on_nix": [],
        "//conditions:default": ["-lX11", "-lXext", "-lm"],
    }),
    linkstatic = True,
    visibility = ["//visibility:public"],
)
