load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "mlx_headers",
    hdrs = ["mlx.h"],
    includes = ["."],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "mlx",
    srcs = glob(
        ["*.c"],
        exclude = ["mlx_lib_xpm.c"],
    ),
    hdrs = [
        "mlx.h",
        "mlx_int.h",
    ],
    copts = [
        "-std=gnu89",
        "-w", # external lib, suppress warns
        "-O3",
    ],
    includes = [
        ".",
        "/usr/include",
    ],
    deps = select({
        "//:on_nix": [
            "@libX11//:libX11",
            "@libXext//:libXext",
            "@libXrandr//:libXrandr",
            "@libXrender//:libXrender",
            # "@libXpm//:libXpm",
        ],
        "//conditions:default": [],
    }),
    linkopts = select({
        "//:on_nix": [],
        "//conditions:default": ["-lX11", "-lXext", "-lm"],
    }),
    linkstatic = True,
    visibility = ["//visibility:public"],
)
