cc_library(
    name = "xpm",
    srcs = glob(
        ["src/*.c"],
        exclude = [
            "src/sxpm.c",
            "src/cxpm.c",
        ],
    ) + [
        "config.h",
    ],
    hdrs = glob([
        "include/X11/*.h",
        "src/*.h",
    ]),
    includes = [
        ".",
        "include",
        "include/X11",
        "src",
    ],
    copts = [
        "-DHAVE_CONFIG_H",
        "-w",
    ],
    linkopts = [
        "-lX11",
        "-lXext",
    ],
    visibility = ["//visibility:public"],
)
