load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "xpm",
    srcs = glob(
        ["src/*.c"],
        exclude = [
            "src/sxpm.c",
            "src/cxpm.c",
        ],
    ) + [
        "config.h",
    ],
    hdrs = glob([
        "include/X11/*.h",
        "src/*.h",
    ]),
    copts = [
        "-DHAVE_CONFIG_H",
        "-w",
    ],
    includes = [
        ".",
        "include",
        "include/X11",
        "src",
    ],
    linkopts = [
        "-lX11",
        "-lXext",
    ],
    visibility = ["//visibility:public"],
)
