load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("//:tools/bazel/copts.bzl", "CC_COPTS")

cc_binary(
    name = "fdf",
    srcs = glob([
        "src/*.c",
        "includes/**/*.h",
    ]),
    copts = CC_COPTS + [
        "-Wno-incompatible-pointer-types",
        "-Wno-cast-function-type",
    ],
    includes = ["includes"],
    visibility = ["//visibility:public"],
    deps = [
        "//central/minilibx:mlx",
        "//milestone-0/libft",
        "//milestone-1/ft_printf",
        "//milestone-1/get_next_line",
    ],
)
