load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("//:tools/bazel/copts.bzl", "CC_COPTS")

cc_binary(
    name = "push_swap",
    srcs = glob(
        [
            "src/**/*.c",
            "includes/**/*.h",
        ],
        exclude = ["src/checker.c"],
    ),
    copts = CC_COPTS,
    includes = ["includes"],
    visibility = ["//visibility:public"],
    deps = [
        "//milestone-1/get_next_line",
    ],
)
