load("//:tools/bazel/copts.bzl", "CC_COPTS")
load("//:tools/bazel/copts.bzl", "READLINE_LINKOPTS")

cc_binary(
    name = "minishell",
    srcs = glob(["src/**/*.c", "includes/**/*.h"]),
    includes = [
        "includes",
        "/usr/include",
    ],
    copts = CC_COPTS,
    linkopts = READLINE_LINKOPTS,
    visibility = ["//visibility:public"],
    deps = [
      "//milestone-1/ft_printf:ft_printf",
    ]
)
