load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("//:tools/bazel/copts.bzl", "CC_COPTS", "READLINE_LINKOPTS")

cc_binary(
    name = "minishell",
    srcs = glob([
        "src/**/*.c",
        "includes/**/*.h",
    ]),
    copts = CC_COPTS,
    includes = [
        "/usr/include",
        "includes",
    ],
    linkopts = READLINE_LINKOPTS,
    visibility = ["//visibility:public"],
    deps = [
        "//milestone-1/ft_printf",
    ],
)
