load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("//:tools/bazel/copts.bzl", "CC_COPTS")

cc_binary(
    name = "philosophers",
    srcs = glob([
        "src/**/*.c",
        "includes/**/*.h",
    ]),
    copts = CC_COPTS,
    includes = ["includes"],
    visibility = ["//visibility:public"],
    deps = [
        "//milestone-0/libft",
    ],
)
