load("//:copts.bzl", "CXX_COPTS")

cc_binary(
    name = "phonebook",
    srcs = [
        "main.cpp",
        "PhoneBook.cpp",
        "Contact.cpp",
    ],
    hdrs = [
        "PhoneBook.hpp",
        "Contact.hpp",
    ],
    copts = CXX_COPTS + ["-MMD", "-MP"],
    visibility = ["//visibility:public"],
)
