load("//:copts.bzl", "CXX_COPTS")

cc_binary(
    name = "megaphone",
    srcs = ["ex00/src/megaphone.cpp"],
    includes = ["ex00/includes"],
    copts = CXX_COPTS,
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "phonebook",
    srcs = glob(["ex01/src/*.cpp", "ex01/includes/*.hpp"]),
    includes = ["ex01/includes"],
    copts = CXX_COPTS,
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "bank",
    srcs = glob(["ex02/src/*.cpp", "ex02/includes/*.hpp"]),
    includes = ["ex02/includes"],
    copts = CXX_COPTS,
    visibility = ["//visibility:public"],
)
