load("//:copts.bzl", "CXX_COPTS")

cc_binary(
    name = "brainz",
    srcs = glob(["ex00/src/*.cpp", "ex00/includes/*.hpp"]),
    includes = ["ex00/includes"],
    copts = CXX_COPTS,
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "more_brainz",
    srcs = glob(["ex01/src/*.cpp", "ex01/includes/*.hpp"]),
    includes = ["ex01/includes"],
    copts = CXX_COPTS,
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "htib",
    srcs = glob(["ex02/src/*.cpp"]),
    copts = CXX_COPTS,
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "uv",
    srcs = glob(["ex03/src/*.cpp", "ex03/includes/*.hpp"]),
    includes = ["ex03/includes"],
    copts = CXX_COPTS,
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "sed",
    srcs = glob(["ex04/src/*.cpp"]),
    includes = ["ex04/includes"],
    copts = CXX_COPTS,
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "harl",
    srcs = glob(["ex05/src/*.cpp", "ex05/includes/*.hpp"]),
    includes = ["ex05/includes"],
    copts = CXX_COPTS,
    visibility = ["//visibility:public"],
)
